# cherry-lip-sync

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md
.github/workflows/: ci.yml  github-actions-demo.yml  manual.yml  release.yml
demo/: hello.tsv  hello_rhubarb.tsv  p2v.py  test_dialog.txt  test_melo.tsv  test_melo2.tsv  test_raw.json  test_rhubarb.tsv  test_rhubarb2.tsv  test_rust.tsv
docs/: comparison.md  model.md
game-of-life/: Cargo.toml
game-of-life/src/: lib.rs
game-of-life/www/: index.html  index.js  package-lock.json  package.json  vite.config.js
images/: demolips.xcf  demolipssheet.xcf
model/: melbank.pt  model.pt  model.ptx  test_in.pt
rust/: Cargo.toml
rust/model/: model.onnx  model_simple.onnx
rust/src/: cmdline.rs  convert_model.rs  hann.rs  input_pipeline.rs  model.rs
rust_inference/: Cargo.toml  Cargo.toml.git  Cargo.toml.path  Cargo.toml.version  blah  model-1-12.pt  model-1-12.ptx  model-2-80-dropout.pt  model-2-80-dropout.ptx  model-random3.pt  model-random3.ptx  splitgru.py
rust_inference/model/: model.pt  model.ptx  test_out.pt
rust_inference/src/: convert_model.rs  lib.rs  main.rs  model.rs  numeric_test.rs
scripts/: build_dataset.py  convert_xml.py  data.ipynb  mfcc_dataset.py  play.ipynb  test.py
src/: Freq.ipynb  Testing.ipynb  cmdline.rs  convert_model.rs  data.py  export_onnx.py  ff.py  hann.rs  inference_audio.py  inference_onnx.py  inference_test.py  input_pipeline.rs  loss.py  main.rs  make_video.py  model.py  model.rs  numeric_test.py  numeric_test.rs  ops.py  train.py  util.py
training/: requirements.txt
training/scripts/: data.ipynb  play.ipynb
training/scripts/commonvoice/: concat.py  convert_process.py  extract.py  pyproject.toml  simplify.py
training/src/: Freq.ipynb  Testing.ipynb  export_onnx.py  inference_audio.py  make_video.py  model.py  numeric_test.py
