[package]
name = "cherrylipsync"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["ndarray"] }
burn-import = { git = "https://github.com/tracel-ai/burn.git" }
clap = { version = "4.5.27", features = ["derive"] }
realfft = "3.4.0"
rustfft = "6.2.0"
symphonium = { version = "0.2.2", features = ["mp3", "flac"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "convert_model"
path = "src/convert_model.rs"

[[bin]]
name = "numeric_test"
path = "src/numeric_test.rs"

[[bin]]
name = "cherrylipsync"
path = "src/cmdline.rs"
