[package]
name = "cherrylipsync"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["ndarray"] }
burn-import = { git = "https://github.com/tracel-ai/burn.git" }
clap = { version = "4.5.27", features = ["derive"] }
realfft = "3.4.0"
rustfft = "6.2.0"
symphonium = { version = "0.2.2", features = ["mp3", "flac"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[[bin]]
name = "convert_model"
path = "src/convert_model.rs"

[[bin]]
name = "cherrylipsync"
path = "src/cmdline.rs"
