[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.0", features = ["ndarray"] }
burn-import = "0.16.0"
clap = { version = "4.5.27", features = ["derive"] }
symphonium = { version = "0.2.2", features = ["mp3"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "convert_model"
path = "src/convert_model.rs"

[[bin]]
name = "numeric_test"
path = "src/numeric_test.rs"

[[bin]]
name = "lipsync"
path = "src/cmdline.rs"
