[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/nwhitehead/burn.git", features = ["ndarray"] }
burn-import = { git = "https://github.com/nwhitehead/burn.git" }

[[bin]]
name = "convert_model"
path = "src/convert_model.rs"

[[bin]]
name = "numeric_test"
path = "src/numeric_test.rs"

[[bin]]
name = "main"
path = "src/main.rs"
