[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { path = "../../burn/crates/burn", features = ["ndarray"] }
burn-import = { path = "../../burn/crates/burn-import" }

[[bin]]
name = "convert_model"
path = "src/convert_model.rs"

[[bin]]
name = "numeric_test"
path = "src/numeric_test.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
