[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.0", features = ["ndarray"] }
burn-import = "0.16.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
